Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30419

Unhandled exception in wsrep::server_state::sst_received

    XMLWordPrintable

Details

    Description

      void wsrep::server_state::wait_until_state(
          wsrep::unique_lock<wsrep::mutex>& lock,
          enum wsrep::server_state::state state) const
      {
          ++state_waiters_[state];
          while (state_ != state)
          {
              cond_.wait(lock);
              // If the waiter waits for any other state than disconnecting
              // or disconnected and the state has been changed to disconnecting,
              // this usually means that some error was encountered
              if (state != s_disconnecting && state != s_disconnected
                  && state_ == s_disconnecting)
              {
                  throw wsrep::runtime_error("State wait was interrupted");
              }
          }
      

      This exception can be bloated to MariaDB server code in wsrep::server_state::sst_received (this=0x555557fea480, cs=..., error=0) at /home/jan/mysql/10.4/wsrep-lib/src/server_state.cpp:727

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.75d
                1.75d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.